Fix: Integrate shared header component across all pages - Replace hardcoded headers in auth and demo pages with shared component - Remove conflicting header CSS from auth-styles.css and demo.html - Add responsive hamburger menu and language switcher to all pages - Ensure consistent header behavior and styling across platform

--- a/auth/login.html
+++ b/auth/login.html
@@ -10,18 +10,7 @@
     <link rel="stylesheet" href="/auth/shared/css/auth-styles.css">
 </head>
 <body>
-    <div class="header">
-        <div class="nav">
-            <a href="/" class="logo">
-                <span class="logo-icon">👨‍🍳</span>
-                ChefSocial Voice
-            </a>
-            <div class="language-toggle">
-                <button class="lang-btn active" data-lang="en">EN</button>
-                <button class="lang-btn" data-lang="fr">FR</button>
-            </div>
-        </div>
-    </div>
+    <!-- Header will be injected by header component -->
 
     <div class="main-content">
         <div class="container">
@@ -137,6 +126,7 @@
     </footer>
 
     <!-- Scripts -->
+    <script src="/dashboard/shared/header.js"></script>
     <script src="/auth/shared/js/i18n.js"></script>
     <script src="/auth/shared/js/auth-handler.js"></script>
     <script>
