--- a/marketing-site/pages/demo.html
+++ b/marketing-site/pages/demo.html
@@ -70,86 +70,7 @@
             box-shadow: var(--shadow-soft);
         }
 
-        /* Header */
-        .header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            z-index: 1000;
-            padding: 1rem 0;
-            backdrop-filter: blur(20px);
-            background: rgba(255, 255, 255, 0.05);
-            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        .nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            max-width: 1400px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        .logo {
-            display: flex;
-            align-items: center;
-            gap: 0.75rem;
-            font-size: 1.75rem;
-            font-weight: 800;
-            color: white;
-            text-decoration: none;
-        }
-
-        .logo-icon {
-            font-size: 2.5rem;
-            background: var(--primary-gradient);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            animation: pulse 2s ease-in-out infinite alternate;
-        }
-
-        @keyframes pulse {
-            from { transform: scale(1); }
-            to { transform: scale(1.05); }
-        }
-
-        /* Language Toggle */
-        .language-toggle {
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(20px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            border-radius: 25px;
-            padding: 0.25rem;
-        }
-
-        .lang-btn {
-            padding: 0.5rem 1rem;
-            border: none;
-            background: transparent;
-            color: rgba(255, 255, 255, 0.8);
-            font-size: 0.875rem;
-            font-weight: 600;
-            border-radius: 20px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .lang-btn.active {
-            background: var(--primary-gradient);
-            color: white;
-            box-shadow: var(--shadow-soft);
-        }
-
-        .lang-btn:hover:not(.active) {
-            background: rgba(255, 255, 255, 0.1);
-            color: white;
-        }
+        /* Header styles removed - now using shared header component */
 
 
         /* Demo Section */
@@ -666,18 +587,7 @@
     </style>
 </head>
 <body>
-    <div class="header">
-        <div class="nav">
-            <a href="/index.html" class="logo">
-                <span class="logo-icon">👨‍🍳</span>
-                ChefSocial Voice
-            </a>
-            <div class="language-toggle">
-                <button class="lang-btn active" data-lang="en">EN</button>
-                <button class="lang-btn" data-lang="fr">FR</button>
-            </div>
-        </div>
-    </div>
+    <!-- Header will be injected by header component -->
 
     <main>
         <section class="demo-section">
@@ -968,15 +878,8 @@
         // Initialize language manager
         const lang = new LanguageManager();
 
-        // Header scroll effect
-        const header = document.getElementById('header');
-        window.addEventListener('scroll', () => {
-            if (window.scrollY > 50) {
-                header.classList.add('scrolled');
-            } else {
-                header.classList.remove('scrolled');
-            }
-        });
+        // Header scroll effect - handled by header component
+        // Removed because header component handles scroll effects
 
         // Demo functionality
         class ChefSocialDemo {
@@ -1243,6 +1146,9 @@
             new ChefSocialDemo();
         });
     </script>
+    
+    <!-- Header component -->
+    <script src="/dashboard/shared/header.js"></script>
     
     <!-- Cleanup script for service workers -->
     <script src="/cleanup-sw.js"></script>
